--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -108,7 +108,7 @@
                     <div class="products-item">
                         <div class="products-top">
                             <a href="" class="products-thumb">
-                                <img src="/assets/yeu-kieu.jpg" alt="">
+                                <img [src]="product.image" alt="">
                             </a>
                             <!-- <a href="" class="buy-now">Add to Cart</a> -->
                         </div>
