--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<div style="margin-top: 10rem" class="container">
+  <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
+<app-compare-product></app-compare-product>
